<resources>
    <string name="app_name">WalkOut</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Walkout Companion</string>
    <string name="nav_header_subtitle">companion@walkout.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_steps">Steps</string>
    <string name="menu_report">Report</string>
    <string name="menu_tracks">Tracks</string>
    <string name="goal">Goal: 100</string>
    <string name="_0">0</string>
    <string name="steps">Steps</string>
    <string name="start">Start</string>
    <string name="toggle_stop">stop</string>
    <string name="toggle_start">start</string>
    <string name="step_permission_denied">permission denied</string>
    <string name="acc_not_available">ACC not available</string>
    <string name="step_not_available">step detector not available</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButtonText">Register</string>
    <string name="orText">or</string>
    <string name="LoginScreenTitle">Login to Walkout Companion</string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Password</string>
    <string name="dailyStepsLabel">Today\'s Steps</string>
    <string name="averageStepsLabel">30 Days Average</string>
    <string name="channel_name">Default Channel</string>
    <string name="channel_description">The default channel used for foreground service</string>
    <string name="svc_notification_title">Step counter is active</string>
    <string name="svc_notification_message">Tracking your steps...</string>
    <string name="start_service_button_text">Start Tracking Steps</string>
    <string name="stop_service_button_text">Stop Tracking Steps</string>
    <string name="use_local_btn_text"> Use Local storage </string>
    <string name="action_logout">Logout</string>
    <string name="element_placeholder">From: 01 01 1970 15:45 \n To:  01 01 1970 16:45</string>
    <string name="action_set_goal">Change goal</string>

</resources>


