<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_steps_item">

    <fragment
        android:id="@+id/nav_steps_item"
        android:name="ch.disappointment.WalkoutCompanion.ui.home.HomeFragment"
        android:label="@string/menu_steps"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_report_item"
        android:name="ch.disappointment.WalkoutCompanion.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/report_fragment" />

    <fragment
        android:id="@+id/nav_tracks_item"
        android:name="ch.disappointment.WalkoutCompanion.ui.map.MapActivity"
        android:label="@string/menu_tracks"
        tools:layout="@layout/activity_map" />
</navigation>


